--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,14 @@ members = [
     "rust/armstrong-numbers",
     "rust/beer-song",
     "rust/difference-of-squares",
+    "rust/grains",
+    "rust/leap",
+    "rust/nth-prime",
+    "rust/prime-factors",
+    "rust/proverb",
+    "rust/raindrops",
+    "rust/sum-of-multiples",
+    "rust/bob",
+    "rust/high-scores",
+    "rust/matching-brackets",
 ]
